--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ header nav ul li button {
     width: 100%;
     justify-content: center;
     align-items: center;
-    height: 80px;
+    height: fit-content;
     background: transparent;
     display: flex;
 }
@@ -971,7 +971,7 @@ header nav ul li button {
 }
 
 .shuffle-btn.active svg, .repeat-btn.active svg {
-    fill: #ffffff;
+    fill: rgba(225, 120, 90, 255);
 }
 
 .shuffle-album-btn.active svg{
